--- a/styles/partials/_font.scss
+++ b/styles/partials/_font.scss
@@ -60,3 +60,47 @@
     font-weight: 700;
     @content;
 }
+
+
+// desktop & tablet font size 
+@mixin tablet-desktop-page-header{
+    font-size: 60px;
+    line-height: 68px;
+    font-weight: 700;
+    @content;
+}
+
+@mixin tablet-desktop-section-header{
+    font-size: 36px;
+    line-height: 44px;
+    font-weight: 700;
+    @content;
+}
+
+@mixin tablet-desktop-subheader{
+    font-size: 24px;
+    line-height: 32px;
+    font-weight: 600;
+    @content;
+}
+
+@mixin tablet-desktop-body-copy{
+    font-size: 14px;
+    line-height: 22px;
+    font-weight: 400;
+    @content;
+}
+
+@mixin tablet-desktop-footer-copy{
+    font-size: 14px;
+    line-height: 20px;
+    font-weight: 400;
+    @content;
+}
+
+@mixin tablet-desktop-labels-buttons{
+    font-size: 12px;
+    line-height: 20px;
+    font-weight: 700;
+    @content;
+}
