--- a/styles/partials/_font.scss
+++ b/styles/partials/_font.scss
@@ -33,19 +33,19 @@
     @content;
 }
 
-@mixin subheader{
-    font-size: 14px;
-    line-height: 22px;
-    font-weight: 600;
-    @content;
-}
+// @mixin subheader{
+//     font-size: 14px;
+//     line-height: 22px;
+//     font-weight: 600;
+//     @content;
+// }
 
-@mixin body-copy{
-    font-size: 13px;
-    line-height: 18px;
-    font-weight: 400;
-    @content;
-}
+// @mixin body-copy{
+//     font-size: 13px;
+//     line-height: 18px;
+//     font-weight: 400;
+//     @content;
+// }
 
 @mixin footer-copy{
     font-size: 13px;
