--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -1,6 +1,6 @@
 @use 'partials/mixins' as *;
 @use 'partials/variables' as *;
-@use 'partials/font' as *;
+@use 'partials/fonts' as *;
 
 html,
 body,
