--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -5,8 +5,7 @@
 html,
 body,
 h1,
-h3,
-p {
+h3{
     margin: 0;
     padding: 0;
     font-family: "AvenirNextLTPro";
@@ -19,24 +18,74 @@ p {
         background-position: center;
         background-size: cover;
         width: 100%;
-        height: 85vh;
+        height: 76vh;
         position: relative;
+
+        &-title{
+            top:25%;
+            line-height: 1.5;
+        }
 
         &-album{
             @include padding-left-right;
-            top: 20%;
+            top: 12%;
             position: absolute;
             color: $White;
-            font-size: 1.625rem;
+            font-size: 1.8rem;
             font-weight: 100;
+        }
+    }
+
+    &__nav{
+        @include header-nav-bar;
+
+        &--shows{
+            color: $White;
+        }
+
+        &::after {
+            @include header-underline;
+            right: 0;
         }
     }
 }
 
-.shows-list {
-    white-space: pre-line;
+h1{
+    padding-left: 56px;
 }
 
+
+.music{
+    position: absolute;
+    width:90%;
+    // top: 54%;
+    top: 58%;
+    padding-left: 28px;
+}
+
+
+.audio-player {
+    width: 100%;
+  }
+
+.shows__heading {
+    white-space: pre-line;
+    padding-left: 28px;
+    padding-top: 70px;
+    padding-bottom: 18px;
+    font-size: 48px;
+    font-weight: 510;
+}
+
+p.shows__title,
+p.shows__detail{
+    margin: 0;
+    // padding: 0;
+}
+
+ul{
+    padding-left: 0;
+}
 .shows{
     &__subtitle {
         @include padding-left-right;
@@ -89,6 +138,16 @@ p {
     background-color:$Mercury;   /* Mercury color */
     margin: 20px 0;   
 }
+
+h1{
+    padding: 0;
+}
+
+// .footer__title--bottom{
+//     padding-top: 4rem;
+//     padding-bottom: 0.6rem;
+// }
+
 
 
 
