--- a/styles/shows.css
+++ b/styles/shows.css
@@ -56,7 +56,7 @@ h3 {
 .header__nav--shows {
   color: #FFFFFF;
 }
-.header__nav::after {
+.header__nav--shows::after {
   position: absolute;
   content: "";
   width: 49vw;
@@ -65,6 +65,23 @@ h3 {
   bottom: -5px;
   transform: scaleX(1);
   right: 0;
+}
+.header__nav--bios {
+  font-weight: 100;
+}
+.header__nav--bios:hover::after {
+  position: absolute;
+  content: "";
+  width: 49vw;
+  height: 12px;
+  background-color: white;
+  bottom: -5px;
+  transform: scaleX(1);
+  left: 0;
+}
+.header__nav--bios:hover {
+  font-weight: 100;
+  color: #FFFFFF;
 }
 
 h1 {
@@ -86,7 +103,7 @@ h1 {
   white-space: pre-line;
   padding-left: 28px;
   padding-top: 70px;
-  padding-bottom: 18px;
+  padding-bottom: 45px;
   font-size: 48px;
   font-weight: 510;
 }
@@ -106,7 +123,7 @@ ul {
   font-size: 24px;
   line-height: 32px;
   font-weight: 700;
-  font-size: 3rem;
+  font-size: 3.5rem;
   font-weight: 600;
   padding-top: 5rem;
   padding-bottom: 2.6rem;
@@ -123,7 +140,7 @@ ul {
 }
 .shows__title {
   color: #AFAFAF;
-  font-size: 1.2rem;
+  font-size: 1.5rem;
   padding-bottom: 12px;
   font-weight: 600;
 }
@@ -131,8 +148,8 @@ ul {
   padding-top: 26px;
 }
 .shows__detail {
-  font-size: 1.6rem;
-  padding-bottom: 20px;
+  font-size: 1.8rem;
+  padding-bottom: 25px;
   padding-top: 8px;
 }
 .shows__detail--modified {
@@ -151,8 +168,8 @@ ul {
 }
 
 .divider {
-  height: 1px; /* Stroke width */
-  background-color: #E1E1E1; /* Mercury color */
+  height: 1px;
+  background-color: #E1E1E1;
   margin: 20px 0;
 }
 
