--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -41,11 +41,25 @@ h3{
 
         &--shows{
             color: $White;
+
+            &::after {
+                @include header-underline;
+                right: 0;
+            }
         }
 
-        &::after {
-            @include header-underline;
-            right: 0;
+        &--bios {   
+            font-weight: 100;
+
+            &:hover::after {
+                @include header-underline;
+                left: 0;
+            }
+
+            &:hover{
+                font-weight: 100;
+                color: $White;
+            }
         }
     }
 }
@@ -72,7 +86,7 @@ h1{
     white-space: pre-line;
     padding-left: 28px;
     padding-top: 70px;
-    padding-bottom: 18px;
+    padding-bottom: 45px;
     font-size: 48px;
     font-weight: 510;
 }
@@ -90,7 +104,7 @@ ul{
     &__subtitle {
         @include padding-left-right;
         @include section-header;
-        font-size: 3rem;
+        font-size: 3.5rem;
         font-weight: 600;
         padding-top: 5rem;
         padding-bottom: 2.6rem;
@@ -110,7 +124,7 @@ ul{
 
     &__title{
         color: $Silver;
-        font-size: 1.2rem;
+        font-size: 1.5rem;
         padding-bottom: 12px;
         font-weight: 600;
         &--modified{
@@ -119,8 +133,8 @@ ul{
     }
 
     &__detail{
-        font-size: 1.6rem;
-        padding-bottom: 20px;
+        font-size: 1.8rem;
+        padding-bottom: 25px;
         padding-top: 8px;
         &--modified{
             font-weight: 600;
@@ -134,8 +148,8 @@ ul{
 }
 
 .divider{
-    height: 1px;                 /* Stroke width */
-    background-color:$Mercury;   /* Mercury color */
+    height: 1px;                 
+    background-color:$Mercury;   
     margin: 20px 0;   
 }
 
