--- a/styles/shows.css
+++ b/styles/shows.css
@@ -83,6 +83,13 @@ h3 {
   font-weight: 100;
   color: #FFFFFF;
 }
+.header__nav--bios:active {
+  font-weight: 600;
+  color: #FFFFFF;
+}
+.header__nav--bios:active::after {
+  transform: scaleX(1);
+}
 
 h1 {
   padding-left: 56px;
@@ -100,7 +107,6 @@ h1 {
 }
 
 .shows__heading {
-  white-space: pre-line;
   padding-left: 28px;
   padding-top: 70px;
   padding-bottom: 45px;
@@ -282,18 +288,24 @@ h1 {
   .header__nav--bios:hover::after {
     bottom: -38px;
   }
-  main {
-    display: flex;
-    width: 100%;
-  }
-  .shows-list {
-    justify-content: space-around;
-    padding-top: 100px;
-    width: 70%;
-    padding-right: 140px;
-  }
   .shows__heading {
-    width: 20%;
+    padding-left: 160px;
+    padding-bottom: 0;
+  }
+  .shows-block {
+    padding-left: 400px;
+  }
+  .divider {
+    margin-left: 400px;
+  }
+  .music {
+    position: absolute;
+    max-width: 30%;
+    top: 25%;
+    right: 0;
+    padding-right: 150px;
+  }
+  .header__image-album {
     padding-left: 160px;
   }
 }/*# sourceMappingURL=shows.css.map */
