--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -60,6 +60,15 @@ h3 {
                 font-weight: 100;
                 color: $White;
             }
+
+            &:active {
+                font-weight: 600;
+                color: $White;
+
+                &::after {
+                    transform: scaleX(1);
+                }
+            }
         }
     }
 }
@@ -83,7 +92,6 @@ h1 {
 }
 
 .shows__heading {
-    white-space: pre-line;
     padding-left: 28px;
     padding-top: 70px;
     padding-bottom: 45px;
@@ -292,7 +300,6 @@ h1 {
         display: none;
     }
 
-
 }
 
 // desktop
@@ -311,24 +318,30 @@ h1 {
                 }
             }
         }
-
-    }
-    main{
-        display: flex;
-        width: 100%;
     }
 
-    .shows-list{
-        justify-content: space-around;
-        padding-top: 100px;
-        width: 70%;
-        padding-right: 140px;
-
+    .shows__heading {
+        padding-left: 160px;
+        padding-bottom: 0;
     }
-            
-    .shows__heading{
-        width: 20%;
+
+    .shows-block {
+        padding-left: 400px;
+    }
+
+    .divider {
+        margin-left: 400px;
+    }
+
+    .music {
+        position: absolute;
+        max-width: 30%;
+        top: 25%;
+        right: 0;
+        padding-right: 150px;
+    }
+
+    .header__image-album {
         padding-left: 160px;
     }
-
 }
