--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -38,38 +38,6 @@ h3 {
 
     &__nav {
         @include header-nav-bar;
-
-        &--shows {
-            color: $White;
-
-            &::after {
-                @include header-underline;
-                right: 0;
-            }
-        }
-
-        &--bios {
-            font-weight: 100;
-
-            &:hover::after {
-                @include header-underline;
-                left: 0;
-            }
-
-            &:hover {
-                font-weight: 100;
-                color: $White;
-            }
-
-            &:active {
-                font-weight: 600;
-                color: $White;
-
-                &::after {
-                    transform: scaleX(1);
-                }
-            }
-        }
     }
 }
 
@@ -107,6 +75,38 @@ p.shows__detail {
 
 ul {
     padding-left: 0;
+}
+
+.shows {
+    color: $White;
+
+    &::after {
+        @include header-underline;
+        right: 0;
+    }
+}
+
+.bios {
+    font-weight: 100;
+
+    &:hover::after {
+        @include header-underline;
+        left: 0;
+    }
+
+    &:hover {
+        font-weight: 100;
+        color: $White;
+    }
+
+    &:active {
+        font-weight: 600;
+        color: $White;
+
+        &::after {
+            transform: scaleX(1);
+        }
+    }
 }
 
 .shows {
@@ -172,6 +172,25 @@ h1 {
     padding: 0;
 }
 
+.music iframe {
+    width: 100%;
+    height: 166px;
+    border: none;
+    overflow: hidden;
+}
+
+.music-info {
+    font-size: 10px;
+    color: #cccccc;
+    line-break: anywhere;
+    word-break: normal;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    font-family: Interstate, Lucida Grande, Lucida Sans Unicode, Lucida Sans, Garuda, Verdana, Tahoma, sans-serif;
+    font-weight: 100;
+}
+
 
 
 
@@ -187,43 +206,43 @@ h1 {
             justify-content: flex-start;
             padding: 0 1.25rem;
             align-items: center;
+        }
+    }
 
-            &--shows {
-                position: relative;
-                display: inline-block;
-                font-weight: 600;
-                color: $White;
+    .shows {
+        position: relative;
+        display: inline-block;
+        font-weight: 600;
+        color: $White;
 
 
-                &::after {
-                    @include header-underline--tablet;
-                    left: 46px;
-                }
-            }
+        &::after {
+            @include header-underline--tablet;
+            left: 46px;
+        }
+    }
 
-            &--bios {
-                position: relative;
-                display: inline-block;
-                font-weight: 100;
+    .bios {
+        position: relative;
+        display: inline-block;
+        font-weight: 100;
 
-                &:hover::after {
-                    @include header-underline--tablet;
-                    left: 48px;
-                }
+        &:hover::after {
+            @include header-underline--tablet;
+            left: 48px;
+        }
 
-                &:hover {
-                    font-weight: 100;
-                    color: $White;
-                }
+        &:hover {
+            font-weight: 100;
+            color: $White;
+        }
 
-                &:active {
-                    font-weight: 600;
-                    color: $White;
+        &:active {
+            font-weight: 600;
+            color: $White;
 
-                    &::after {
-                        transform: scaleX(1);
-                    }
-                }
+            &::after {
+                transform: scaleX(1);
             }
         }
     }
@@ -311,17 +330,13 @@ h1 {
 // desktop
 // desktop
 @media (min-width: $desktop-break-point) {
-    .header {
-        &__nav {
-            &--shows::after {
-                bottom: -38px;
-            }
+    .shows::after {
+        bottom: -38px;
+    }
 
-            &--bios {
-                &:hover::after {
-                    bottom: -38px;
-                }
-            }
+    .bios {
+        &:hover::after {
+            bottom: -38px;
         }
     }
 
